2006-03-15  Felix Kuehling  <fxkuehl@gmx.de>

	* GL/mesa/shader/slang/Makefile.am:
	* GL/symlink-mesa.sh:
	Update to build against Mesa CVS HEAD.

2006-03-15  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaMoveInPixmap):
	Don't let pinned pixmaps get migrated in when using the "Always"
	migration scheme.  This notably keeps the visible screen from getting
	migrated in to a new location in framebuffer.

	Reported by:	Michel Dänzer.

2006-03-15  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/loader/loadmod.c:
	Coverity #1053: Nuke a dead variable.
	Coverity #269: Compare the requested ABI class against the ABI class
	    of the module, not the module class.
	Coverity #794: Fix a highly unlikely memory leak.

	* miext/cw/cw.c:
	Coverity #337: Remove useless NULL check.

	* hw/xfree86/loader/loader.c:
	Coverity #484: Fix an off-by-one in module refcounting.

	* damageext/damageext.c:
	Coverity #491: Check version number correctly.

	* xfixes/xfixes.c:
	Coverity #487: Check version number correctly.

	* hw/xfree86/common/xf86VidMode.c:
	Coverity #490: Fix a range check in xf86vidmode extension.

	* xfixes/region.c:
	Coverity #807: Fix a memory leak in XFixesExpandRegion.

	* hw/xfree86/xf4bpp/ppcPixFS.c:
	Coverity #1042, 1043: Nuke some dead variables.

2006-03-15  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* hw/xfree86/dri/dri.c: (DRIExtensionInit):
	Fix DRIExtensionInit() to not register callbacks when it hasn't been
	initialized for the current server generation. Fixes a problem where
	it would use stale private index and blow up in colorful ways if no
	driver called DRIScreenInit() on the second generation (which happens
	due to a bug in radeon that i'll fix separately). Note: clearing the
	index in DRIReset() wouldn't work as DRIReset() is called before the
	CloseScreen() chain

2006-03-15  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* hw/xfree86/common/xf86fbman.c: (localAllocateOffscreenLinear):